--- a/_experience/2021-09-30-ASP.md
+++ b/_experience/2021-09-30-ASP.md
@@ -77,7 +77,7 @@ These projects strengthened our ability to deliver custom solutions to clients. 
 The occurrence of single event effects in electronic components can lead to serious performance issues. A specialized system was required to test and mitigate these effects using a laser.
 
 #### Action
-- Managed the project custom work and prdocution to completion.
+- Managed the project custom work and production to completion.
 - Implemented, deployed, and commissioned a specialized testing system for SEEs.
 
 <p float="center">
