minimized image size for easy website loading

--- a/_posts/2015-10-12-THE-BART.md
+++ b/_posts/2015-10-12-THE-BART.md
@@ -28,12 +28,12 @@ To address this challenge, the following actions were taken:
 
 ### Screenshots
 
-![BART](/assets/img/BART/0.bmp)
+![BART](/assets/img/BART/0.png)
 
-![BART](/assets/img/BART/1.bmp)
+![BART](/assets/img/BART/1.png)
 
-![BART](/assets/img/BART/2.bmp)
+![BART](/assets/img/BART/2.png)
 
-![BART](/assets/img/BART/3.bmp)
+![BART](/assets/img/BART/3.png)
 
-![BART](/assets/img/BART/4.bmp)
+![BART](/assets/img/BART/4.png)
